See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.79.00

              Add pamtable .

              pamcomp: fix incorrect output with -mixtransparency.
              Always broken.  (-mixtransparency was new in Netpbm 10.56,
              September 2011).

              pamcomp: remove debug trace message with -mixtransparency.
              Always broken.  (-mixtransparency was new in Netpbm 10.56,
              September 2011).

              pnmtojpeg: fix array bounds violation in argument list.  Always
              broken (pnmtojpeg was new to Netpbm in Netpbm 8.2 (March 2000).

              Debian packaging: fix bug: don't try to include Manweb files, as
              it is no longer packaged by 'make package'.

17.03.28 BJH  Release 10.78.00

              ppmpat: Add -color.

              ppmpat: Add -argyle1, -argyle2.

              pnmtotiff: Fail with -miniswhite or -minisblack on color image
              rather than produce an invalid TIFF.

              tifftopnmcmyk: Default rows per strip to the TIFF library
              default instead of whatever yields 8K strips.

              --version global option: with SOURCE_DATE_EPOCH environment
              variable, display source code datetime instead of build
              datetime.  And when displaying build datetime, do it in the
              local time of the process running the command instead of the
              process that did the build.

              tifftonm: Fix incorrect PBM output with two-color paletted TIFF
              image.  Broken in primordial Netpbm, ca 1990.

              tifftopnm: Fix memory corruption when image is more pixels than
              can be represented as a C unsigned integer.  Broken in Netpbm
              10.11 (October 2002).

              tifftopnmcmyk: Fix bug: fails with very wide images and no